--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Real Estate Builders Free Responsive Website Templates - icon">
+	<meta name="description" content="Deloitte Digital Learning">
 	<meta name="author" content="webThemez.com">
 	<title>Real Estate Builders Free Bootstrap Website Templates - icon</title>
 	<link rel="favicon" href="assets/images/favicon.png">
