--- a/Other.html
+++ b/Other.html
@@ -36,17 +36,16 @@
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li><a href="../Testerdc/index.html">Home</a></li>
 					<li><a href="../Testerdc/about.html">About</a></li>
-						<li></li>
-					<li></li>
-					<li class="active"></li>
+					
+					<li class="active">
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="https://ottdigitallearning.github.io/Deloitte/eLearning.html">eLearning Programs</a></li>
 							<li><a href="https://ottdigitallearning.github.io/Deloitte/Video.html">Videos</a></li>
-							<li><a href="https://ottdigitallearning.github.io/Deloitte/other.html">Other</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/Other.html">Other</a></li>
 						</ul>
-					</li>
+					</li></li>
 					<li><a href="../Testerdc/contact.html">Contact</a></li>
 				</ul>
 			</div>
