--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <ul class="nav navbar-nav pull-right mainNav">
                     <li><a href="index.html">Home</a></li>
                     <li class="active"><a href="about.html">About</a></li>
-                   	<li></li>
+                   	<li class="active">
                     <li class="dropdown">
                    	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
