--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Deloitte Digital Learning">
 	<meta name="author" content="webThemez.com">
-	<title>Real Estate Builders Free Bootstrap Website Templates - icon</title>
+	<title>Deloitte Digital Learning</title>
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -40,16 +40,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li class="active">
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="https://ottdigitallearning.github.io/Deloitte/eLearning.html">eLearning Programs</a></li>
 							<li><a href="https://ottdigitallearning.github.io/Deloitte/Video.html">Videos</a></li>
-							<li><a href="https://ottdigitallearning.github.io/Deloitte/other.html">Other</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/Other.html">Other</a></li>
 						</ul>
+					</li>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
 
