--- a/eLearning.html
+++ b/eLearning.html
@@ -38,15 +38,15 @@
 					<li><a href="../Deloitte/about.html">About</a></li>
 						<li></li>
 					<li></li>
-					<li class="active"></li>
+					<li class="active">
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="https://ottdigitallearning.github.io/Deloitte/eLearning.html">eLearning Programs</a></li>
 							<li><a href="https://ottdigitallearning.github.io/Deloitte/Video.html">Videos</a></li>
-							<li><a href="https://ottdigitallearning.github.io/Deloitte/other.html">Other</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/Other.html">Other</a></li>
 						</ul>
-					</li>
+					</li></li>
 					<li><a href="../Deloitte/contact.html">Contact</a></li>
 				</ul>
 			</div>
