--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li class="active">
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="https://ottdigitallearning.github.io/Deloitte/eLearning.html">eLearning Programs</a></li>
 							<li><a href="https://ottdigitallearning.github.io/Deloitte/Video.html">Videos</a></li>
-							<li><a href="https://ottdigitallearning.github.io/Deloitte/other.html">Other</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/Other.html">Other</a></li>
 						</ul>
+					</li>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
 
