--- a/contact.html
+++ b/contact.html
@@ -34,21 +34,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				<a class="navbar-brand" href="index.html">
-					<img src="assets/images/logo.png" alt="Deloitte Digital Learning"></a>
+					<img src="assets/images/logo.png" alt="Deloitte"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li class="active">
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="https://ottdigitallearning.github.io/Deloitte/eLearning.html">eLearning Programs</a></li>
-							<li><a href="https://ottdigitallearning.github.io/Deloitte/Video.html">Videos</a></li>
-							<li><a href="https://ottdigitallearning.github.io/Deloitte/Other.html">Other</a></li>
+							<li><a href="eLearning.html">eLearning</a></li>
+							<li><a href="Video.html">Video</a></li>
+							<li><a href="Other.html">Other</a></li>
 						</ul>
-					</li>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
 
@@ -57,7 +55,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!--/.nav-collapse -->
 		</div>
 	</div>
-	<!-- /.navbar -->
+	<!-- /.navbar -->	
 
 	<header id="head" class="secondary">
 		<div class="container">
